# coderev

./: .env.example  .gitignore  .pre-commit-config.yaml  Makefile  README.md  alembic.ini  docker-compose.yml  pyproject.toml  result.txt
.github/workflows/: ci.yml  self-review.yml
alembic/: env.py
alembic/versions/: 2026_01_12_initial_schema.py
docker/: Dockerfile.api  Dockerfile.worker
k8s/: pbd.yaml
k8s/base/: api-hpa.yaml  configmap.yaml  kustomization.yaml  namespace.yaml  secrets.yaml
k8s/base/api/: deployment.yaml  hpa.yaml  service.yaml
k8s/base/worker/: deployment.yaml  pdb.yaml
k8s/overlays/local/: ingress.yaml  kustomization.yaml  postgres.yaml  redis.yaml
k8s/overlays/local/patches/: api-resources.yaml  replicas.yaml  worker-resources.yaml
k8s/scripts/: deploy-local.sh  generate-secrets.sh  load-images.sh  setup-ingress.sh  setup-kind.sh  teardown.sh
observability/grafana/provisioning/dashboards/: coderev-overview.json  dashboards.yml
observability/grafana/provisioning/datasources/: datasources.yml
observability/prometheus/: prometheus.yml
scripts/: test_github.py  test_llm.py  test_pipeline.py
src/: __init__.py  test_sample.py
src/api/: dependencies.py  main.py
src/api/middleware/: __init__.py  metrics.py
src/api/routes/: health.py  metrics.py  reviews.py  webhooks.py
src/core/: __init__.py  config.py  exceptions.py  metrics.py
src/db/: __init__.py  models.py  session.py
src/db/repositories/: __init__.py  base.py  repositories.py  reviews.py
src/prompts/: __init__.py  review.py
src/services/github/: __init__.py  client.py  models.py
src/services/llm/: __init__.py  anthropic.py  base.py  ollama.py  router.py
src/services/review/: __init__.py  diff_parser.py  formatter.py  pipeline.py
src/worker/: __init__.py  celery_app.py
src/worker/tasks/: __init__.py  review_tasks.py
terraform/modules/eks/: main.tf
terraform/modules/vpc/: main.tf  outputs.tf  variable.tf
tests/: conftest.py
tests/fixtures/: sample_diffs.py
tests/integration/: test_api.py
tests/unit/: test_diff_parser.py  test_formatter.py  test_github_client.py  test_health.py  test_llm.py  test_metrics.py  test_pipeline.py  test_repositories.py
